--- a/index.html
+++ b/index.html
@@ -3,10 +3,78 @@
 <title>Fitness Website</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+	<section class="banner">
+		<div class="slider">
+			<div id="slider" class="carousel slide carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="images/1.jpg" class="d-block w-100" alt="...">
+                      <div class="carousel-caption">
+                      	<h1>Test</h1>
+                      	<h2>Work out</h2>
+                      	<p>This source code has been provided to you free of no chargePlease Like,comment,share and suscribe to "Peter Donkor" youtube channel.Enjoy your code.Thank You</p>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <img src="images/" class="d-block w-100" alt="...">
+                      <div class="carousel-caption">
+                      	<h1>Test</h1>
+                      	<h2>Work out</h2>
+                      	<p>This source code has been provided to you free of no chargePlease Like,comment,share and suscribe to "Peter Donkor" youtube channel.Enjoy your code.Thank You</p>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <img src="images/" class="d-block w-100" alt="...">
+                      <div class="carousel-caption">
+                      	<h1>Test</h1>
+                      	<h2>Work out</h2>
+                      	<p>This source code has been provided to you free of no chargePlease Like,comment,share and suscribe to "Peter Donkor" youtube channel.Enjoy your code.Thank You</p>
+                      </div>
+                    </div>
+                    <div class="carousel-item">
+                      <img src="images/" class="d-block w-100" alt="...">
+                      <div class="carousel-caption">
+                      	<h1>Test</h1>
+                      	<h2>Work out</h2>
+                      	<p>This source code has been provided to you free of no chargePlease Like,comment,share and suscribe to "Peter Donkor" youtube channel.Enjoy your code.Thank You</p>
+                      </div>
+                    </div>
+                </div>
+                <ol class="carousel-indicators">
+             	    <li data-target="#slider" data-slide-to="0" class="active"></li>
+             	    <li data-target="#slider" data-slide-to="1"></li>
+             	    <li data-target="#slider" data-slide-to="2"></li>
+             	    <li data-target="#slider" data-slide-to="3"></li>
+             	    <div class="share"><img src="images/share.png"><small>share</small></div>
+                </ol>
+            </div>
+		</div>
+		<div class="side-menu">
+			<img src="images/menu.png" class="menu-icon">
+			<img src="images/search.png" class="search-icon">
+		</div>
+		<div class="top-bar">
+		<ul>
+			<li><img src="images/logo.png"></li>
+			<li><a href="">About us</a></li>
+			<li><a href="">Contact us</a></li>
+			<li><a href="">Sign up</a></li>
+		</ul>
+		</div>
+		<div class="social-icons">
+			<ul>
+				<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+				<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+				<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+				<li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
+				<li><a href="#"><i class="fa fa-github"></i></a></li>
+			</ul>
+		</div>
+	</section>
 </body>
 <html>
