--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="images/" class="d-block w-100" alt="...">
+                      <img src="images/2.jpg" class="d-block w-100" alt="...">
                       <div class="carousel-caption">
                       	<h1>Test</h1>
                       	<h2>Work out</h2>
@@ -29,7 +29,7 @@
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="images/" class="d-block w-100" alt="...">
+                      <img src="images/3.jpg" class="d-block w-100" alt="...">
                       <div class="carousel-caption">
                       	<h1>Test</h1>
                       	<h2>Work out</h2>
@@ -37,7 +37,7 @@
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="images/" class="d-block w-100" alt="...">
+                      <img src="images/4.jpg" class="d-block w-100" alt="...">
                       <div class="carousel-caption">
                       	<h1>Test</h1>
                       	<h2>Work out</h2>
@@ -50,7 +50,7 @@
              	    <li data-target="#slider" data-slide-to="1"></li>
              	    <li data-target="#slider" data-slide-to="2"></li>
              	    <li data-target="#slider" data-slide-to="3"></li>
-             	    <div class="share"><img src="images/share.png"><small>share</small></div>
+             	    <div class="share"><img src="images/share.png"></div>
                 </ol>
             </div>
 		</div>
@@ -61,9 +61,9 @@
 		<div class="top-bar">
 		<ul>
 			<li><img src="images/logo.png"></li>
-			<li><a href="">About us</a></li>
-			<li><a href="">Contact us</a></li>
-			<li><a href="">Sign up</a></li>
+			<li><a href=""><strong>About us</strong></a></li>
+			<li><a href=""><strong>Contact us</strong></a></li>
+			<li><a href=""><strong>Sign up</strong></a></li>
 		</ul>
 		</div>
 		<div class="social-icons">
@@ -72,7 +72,7 @@
 				<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 				<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 				<li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
-				<li><a href="#"><i class="fa fa-github"></i></a></li>
+				<li><a href="https://github.com/dinushchathurya/bootstrap-gym-website"><i class="fa fa-github"></i></a></li>
 			</ul>
 		</div>
 	</section>
