--- a/index.html
+++ b/index.html
@@ -15,33 +15,33 @@
                     <div class="carousel-item active">
                       <img src="images/1.jpg" class="d-block w-100" alt="...">
                       <div class="carousel-caption">
-                      	<h1>Test</h1>
-                      	<h2>Work out</h2>
-                      	<p>This source code has been provided to you free of no chargePlease Like,comment,share and suscribe to "Peter Donkor" youtube channel.Enjoy your code.Thank You</p>
+                      	<h1>BELLY BURN</h1>
+                      	<h2>WORKOUT</h2>
+                      	<p><strong>The source code has been provided to you free of charge.By clicking Github icon you can access to the source code.Don't forgot to follow me on Github.Thank You</strong></p>
                       </div>
                     </div>
                     <div class="carousel-item">
                       <img src="images/2.jpg" class="d-block w-100" alt="...">
                       <div class="carousel-caption">
-                      	<h1>Test</h1>
-                      	<h2>Work out</h2>
-                      	<p>This source code has been provided to you free of no chargePlease Like,comment,share and suscribe to "Peter Donkor" youtube channel.Enjoy your code.Thank You</p>
+                      	<h1>CARDIO</h1>
+                      	<h2>TRAINING</h2>
+                      	<p><strong>The source code has been provided to you free of charge.By clicking Github icon you can access to the source code.Don't forgot to follow me on Github.Thank You</strong></p>
                       </div>
                     </div>
                     <div class="carousel-item">
                       <img src="images/3.jpg" class="d-block w-100" alt="...">
                       <div class="carousel-caption">
-                      	<h1>Test</h1>
-                      	<h2>Work out</h2>
-                      	<p>This source code has been provided to you free of no chargePlease Like,comment,share and suscribe to "Peter Donkor" youtube channel.Enjoy your code.Thank You</p>
+                      	<h1>CROSSFIT</h1>
+                      	<h2>WORKOUT</h2>
+                      	<p><strong>The source code has been provided to you free of charge.By clicking Github icon you can access to the source code.Don't forgot to follow me on Github.Thank You</strong></p>
                       </div>
                     </div>
                     <div class="carousel-item">
                       <img src="images/4.jpg" class="d-block w-100" alt="...">
                       <div class="carousel-caption">
-                      	<h1>Test</h1>
-                      	<h2>Work out</h2>
-                      	<p>This source code has been provided to you free of no chargePlease Like,comment,share and suscribe to "Peter Donkor" youtube channel.Enjoy your code.Thank You</p>
+                      	<h1>STRENGHT</h1>
+                      	<h2>WORKOUT</h2>
+                      	<p><strong>The source code has been provided to you free of charge.By clicking Github icon you can access to the source code.Don't forgot to follow me on Github.Thank You</strong></p>
                       </div>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
 		</div>
 		<div class="top-bar">
 		<ul>
-			<li><img src="images/logo.png"></li>
+			<li><img src="images/images.png" class="logo"></li>
 			<li><a href=""><strong>About us</strong></a></li>
 			<li><a href=""><strong>Contact us</strong></a></li>
 			<li><a href=""><strong>Sign up</strong></a></li>
