--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                       <div class="carousel-caption">
                       	<h1>BELLY BURN</h1>
                       	<h2>WORKOUT</h2>
-                      	<p><strong>The source code has been provided to you free of charge.By clicking Github icon you can access to the source code.Don't forgot to follow me on Github.Thank You</strong></p>
+                      	<p><strong>The source code has been provided to you free of charge.By clicking Github icon you can access to the source code.Don't forget to follow me on Github.Thank You</strong></p>
                       </div>
                     </div>
                     <div class="carousel-item">
@@ -25,7 +25,7 @@
                       <div class="carousel-caption">
                       	<h1>CARDIO</h1>
                       	<h2>TRAINING</h2>
-                      	<p><strong>The source code has been provided to you free of charge.By clicking Github icon you can access to the source code.Don't forgot to follow me on Github.Thank You</strong></p>
+                      	<p><strong>The source code has been provided to you free of charge.By clicking Github icon you can access to the source code.Don't forget to follow me on Github.Thank You</strong></p>
                       </div>
                     </div>
                     <div class="carousel-item">
@@ -33,7 +33,7 @@
                       <div class="carousel-caption">
                       	<h1>CROSSFIT</h1>
                       	<h2>WORKOUT</h2>
-                      	<p><strong>The source code has been provided to you free of charge.By clicking Github icon you can access to the source code.Don't forgot to follow me on Github.Thank You</strong></p>
+                      	<p><strong>The source code has been provided to you free of charge.By clicking Github icon you can access to the source code.Don't forget to follow me on Github.Thank You</strong></p>
                       </div>
                     </div>
                     <div class="carousel-item">
@@ -41,7 +41,7 @@
                       <div class="carousel-caption">
                       	<h1>STRENGHT</h1>
                       	<h2>WORKOUT</h2>
-                      	<p><strong>The source code has been provided to you free of charge.By clicking Github icon you can access to the source code.Don't forgot to follow me on Github.Thank You</strong></p>
+                      	<p><strong>The source code has been provided to you free of charge.By clicking Github icon you can access to the source code.Don't forget to follow me on Github.Thank You</strong></p>
                       </div>
                     </div>
                 </div>
